Setting up initial structure

--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
+<!DOCTYPE html>
+
 <html>
 <head>
-    <title>Coming soon</title>
+    <title>Erik & Aubrey</title>
+    <link href="css/style.css" type="text/css" rel=”stylesheet">
 </head>
 <body>
-    <h1>Coming soon</h1>
+    <nav>
+        <ul>
+            <li>Our Story</li>
+            <li>Wedding Party</li>
+            <li>RSVP</li>
+            <li>Directions</li>
+            <li>Registry</li>
+        </ul>
+    </nav>
 </body>
 </html>
