Started page template
Added background image, font styling

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <html>
 <head>
     <title>Erik & Aubrey</title>
-    <link href="css/style.css" type="text/css" rel=”stylesheet">
+    <link href="css/style.css" type="text/css" rel=”stylesheet"/>
+    <style>
+    @import url('https://fonts.googleapis.com/css?family=Courgette');
+    @import url('https://fonts.googleapis.com/css?family=Ovo');
+    div {
+        border-style: solid;
+    }
+    h1 {
+        font-family: 'Courgette', cursive;
+        font-size: 4em;
+        color: #34495E;
+    }
+    nav {
+        font-family: 'Ovo', serif;
+    }
+    .text {
+        font-family: 'Ovo', serif;
+        font-size: 1.5em;
+        color: #364a5e;
+    }
+    #clock{
+        background: url('images/backgroundPH.jpeg') no-repeat center center;
+        background-size: cover;
+    }
+    </style>
 </head>
 <body>
+<div>
+    <h1>Erik & Aubrey</h1>
+</div>
+<div class="navigation">
     <nav>
         <ul>
             <li>Our Story</li>
@@ -15,5 +43,13 @@
             <li>Registry</li>
         </ul>
     </nav>
+</div>
+<div id="clock">
+    <p>Countdown to go here</p>
+</div>
+<div class="text">
+    <p>Erik la la la la la la la</p>
+    <p>Aubrey la la la la la la</p>
+</div>
 </body>
 </html>
